--- a/Index.html
+++ b/Index.html
@@ -67,7 +67,8 @@
   <li>Handled 50-70 incoming calls per days and managed about 10-20 per projects in outbound calls.</li>
   <li>Helped members to navigate and understand health insurance policies and next step processes</li>
   <li>Scheduled in-home appointments for specialty care for members who home bound and community events for members are to get help with enrollment and questions regarding their health policies.</li>
-  </li>Admin monitoring to provide support to fellow advisors</li>
+  </li>
+  <li>Admin monitoring to provide support to fellow advisors</li>
   <li>Applied professional judgment and critical thinking techniques to resolve issues as they arise</li>
   <li>Managed time effectively to ensure productivity goals are met.</li>
   <li> Identified and sort out opportunities within one’s own work flow to improve call efficiency.</li>
